# xdiff

./: Cargo.toml  README.md
examples/: similar.rs
